@@ -49,6 +49,8 @@ struct {
   { "FileSaveGame08", ID_FILE_SAVEGAME_SLOT8 },
   { "FileSaveGame09", ID_FILE_SAVEGAME_SLOT9 },
   { "FileSaveGame10", ID_FILE_SAVEGAME_SLOT10 },
+  { "FileRecentReset", ID_FILE_RECENT_RESET },
+  { "FileRecentFreeze", ID_FILE_RECENT_FREEZE },
   { "FileRecent01", ID_FILE_MRU_FILE1 },
   { "FileRecent02", ID_FILE_MRU_FILE2 },
   { "FileRecent03", ID_FILE_MRU_FILE3 },
@@ -65,6 +67,7 @@ struct {
   { "FileImportGamesharkCodeFile", ID_FILE_IMPORT_GAMESHARKCODEFILE },
   { "FileImportGamesharkSnapshot", ID_FILE_IMPORT_GAMESHARKSNAPSHOT },
   { "FileExportBatteryFile", ID_FILE_EXPORT_BATTERYFILE },
+  { "FileExportGamesharkSnapshot", ID_FILE_EXPORT_GAMESHARKSNAPSHOT },
   { "FileScreenCapture", ID_FILE_SCREENCAPTURE },
   { "FileRomInformation", ID_FILE_ROMINFORMATION },
   { "FileClose", ID_FILE_CLOSE },
